Add oneBuilder workflow GUI and runtime bridge
- add a standalone FlatLaf/Jide workflow GUI with Input / Align, Tree Build, and current-run Tanglegram tabs

- bridge GUI runtime settings into the shell wrappers and Python pipelines with JSON config support

- refresh the standalone tanglegram viewer, document launch commands, and silence the FlatLaf native-access warning on newer JDKs